# coverit-crawler

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  docker.sh  example_flows.py  example_usage.py  find_flows_script.py  manual_flow_add.py  pyproject.toml  requirements.runtime.txt  requirements.txt  ruff.toml  sitecustomize.py
.github/workflows/: docker.yml  test.yml
.husky/: commit-msg  pre-commit
overrides/: api.cloud.yml  api.dev.yml  api.test.yml  crawler.dev.yml  crawler.prod.yml
prisma/: schema.prisma
scripts/: precommit_ruff.py  probe_crawl_pipeline.py  run_local_worker.py
src/: __init__.py  app.ts  config.py  index.ts  utils.py
src/__tests__/: app.test.ts
src/browser/: __init__.py  actions.py  engine.py  frames.py  js_loader.py  page_manager.py  runtime.py  state.py  storage_state.py
src/config/: env.ts  swagger.ts
src/configs/: input_defaults.json
src/constants/: auth.ts
tests/: test_action_limits_001_blocks_zero.py  test_action_limits_002_allows_before_limit.py  test_action_limits_003_blocks_at_limit.py  test_action_limits_004_scopes_independent.py  test_action_limits_005_actions_independent.py  test_coercion_001_int_accepts_int.py  test_coercion_002_int_casts_float.py  test_coercion_003_int_parses_string.py  test_coercion_004_int_defaults_empty_string.py  test_coercion_005_int_defaults_bool.py  test_coercion_006_float_accepts_int.py  test_coercion_007_float_parses_string.py  test_coercion_008_float_defaults_none.py  test_coercion_009_bool_accepts_bool.py  test_coercion_010_bool_numeric_zero.py  test_coercion_011_bool_numeric_one.py  test_coercion_012_bool_true_words.py  test_coercion_013_bool_false_words.py  test_coercion_014_bool_defaults_unknown_string.py  test_coercion_015_str_accepts_string.py  test_coercion_016_str_defaults_empty.py  test_coercion_017_str_defaults_none.py  test_coercion_018_str_converts_number.py  test_coercion_019_int_invalid_string_raises.py  test_coercion_020_float_invalid_string_raises.py  test_common_001_to_ms.py  test_common_002_read_file.py  test_crawl_session_job.py  test_dom_001_css_escape_hash.py  test_dom_002_css_escape_quotes.py  test_dom_003_element_tag_lowercases.py  test_dom_004_element_type_lowercases.py  test_dom_005_text_input_input.py  test_dom_006_text_input_textarea.py  test_dom_007_text_input_contenteditable.py  test_dom_008_button_button_tag.py  test_dom_009_button_role.py  test_dom_010_button_submit_input.py  test_dom_011_enter_text.py  test_dom_012_enter_search.py  (+101 more)
(+169 files in other folders)
