[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coverit-crawler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "arq>=0.26.0",
  "asyncpg>=0.30.0,<1.0",
  "greenlet>=3.1.0",
  "neo4j>=5.18.0",
  "playwright>=1.45.0",
  "python-dotenv>=1.0.0",
  "redis>=5.0.0",
  "coverit-contracts",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7.0",
  "ruff>=0.6.9",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.uv]
extra-index-url = ["https://coveritlabs.github.io/coverit-contracts/simple/"]
